--- a/style.css
+++ b/style.css
@@ -1,15 +1,31 @@
-body {
-  background-color: #f8f8f8;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
+@charset "UTF-8";
+
+*{
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    box-sizing: border-box;
 }
 
-.container img {
-  width: 400px;
-  height: auto;
-  border-radius: 15px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+body {
+    background-color: #c8d1ee;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    flex-direction: column;
+}
+
+a{
+    font-family: monospace;
+    font-size: 40px;
+    border: 3px solid rgb(14, 14, 80);
+    text-decoration: none;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.308);
+    color: rgb(216, 233, 238);
+    font-weight: bold;
+    background-color: #172d91;
+    border-radius: 25px;
+    padding: 80px 120px;
 }
